# pdf-merger-api

./: .dockerignore  .env.example  .gitignore  BMTM-Proje-DemirhanCakir-sunum.pptx  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ~$BMTM-Proje-DemirhanCakir.pptx
.github/workflows/: ci.yml
charts/pdf-merger/: Chart.yaml  values.yaml
charts/pdf-merger/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  scaledobject.yaml  secret.yaml  service.yaml
docs/: build-architecture.py  build-report.py  final-report.md
k8s/: configmap.yaml  deployment.yaml  localstack.yaml  postgres.yaml  scaledobject.yaml  secret.example.yaml  service.yaml  servicemonitor.yaml
migrations/: env.py
migrations/versions/: 0001_init.py
monitoring/: grafana-dashboard-provider.yml  grafana-dashboard.json  prometheus.yml
perf/: load-test.js  report.md  smoke-test.js
postman/: collection.json
src/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  telemetry.py
src/routers/: files.py  health.py  merge.py
src/services/: pdf_merger.py  s3_client.py
static/: index.html
tests/: conftest.py  factories.py  helpers.py
tests/e2e/: conftest.py  test_swagger_ui.py
tests/integration/: test_files_api.py  test_health.py  test_merge_api.py
tests/unit/: test_config.py  test_models.py  test_pdf_merger.py  test_schemas.py
